new class and methods.